src/test/deca/syntax/invalid/infinite_float.deca
// Description:
//    programme contenant un float infini
//   
//


{
    float f = 4.1E38;
}